css/common.css
@import "reset.css";
@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/variable/pretendardvariable-dynamic-subset.css");
@import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Arima:wght@300;400;700&family=Arizonia&family=Black+Han+Sans&family=Black+Ops+One&family=Blaka+Hollow&family=Bodoni+Moda:ital,opsz@1,6..96&family=Bungee&family=Bungee+Shade&family=Carter+One&family=Cinzel+Decorative:wght@400;700&family=Creepster&family=DM+Serif+Display&family=DM+Serif+Text&family=EB+Garamond:wght@400;700&family=Fredericka+the+Great&family=Graduate&family=Gruppo&family=Hammersmith+One&family=Italianno&family=Kelly+Slab&family=Kodchasan:wght@300;400;700&family=Libre+Baskerville:wght@400;700&family=Limelight&family=Lobster+Two:wght@400;700&family=Monoton&family=Montserrat+Alternates:wght@300;400;700&family=Montserrat+Subrayada&family=Montserrat:wght@300;400;700;900&family=Nixie+One&family=Oleo+Script&family=Oranienbaum&family=Oswald:wght@300;400;700&family=Pacifico&family=Padyakke+Expanded+One&family=Pirata+One&family=Poiret+One&family=Press+Start+2P&family=Quicksand:wght@300;400;700&family=Rampart+One&family=Roboto:wght@300;400;700&family=Rubik+Gemstones&family=Rubik+Vinyl&family=Sen:wght@400;700&family=Stalemate&family=Tenor+Sans&family=Tilt+Prism&family=Waterfall&family=Yesteryear&display=swap");
@font-face {
  font-family: "PyeongChangPeace-Bold";
  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-02@1.0/PyeongChangPeace-Bold.woff2")
    format("woff2");
  font-weight: 700;
  font-style: normal;
}

:root {
  --logo-h: 65px;
  --logo-bp: -4px;
  --blue: #0f8eff;
}

body {
  font-family: "Pretendard Variable", Pretendard, -apple-system,
    BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI",
    "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji",
    "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
  color: #333;
}
.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  width: 100%;
}

.gnb {
  flex: 1 0 100px;
  width: 100%;
  align-items: center;
  margin-bottom: 50px;
}

.main-container {
  max-width: 1200px;
  flex: 1 0 calc(100vh - 370px);
}
.gnb-wrap {
  max-width: 1200px;
  margin: 30px auto;
  height: 80px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 10px;
}

.gnb-logo {
  position: relative;
  padding: 0 20px;
  height: var(--logo-h);
  border: 1px solid var(--blue);
  display: flex;
  justify-content: center;
  align-items: center;
}
.gnb-logo a {
  height: 100%;
}

#logoPlus {
  color: var(--blue);
  font-size: 32px;
}

.gnb-logo .box {
  position: absolute;
  width: 6px;
  height: 6px;
  background-color: #fff;
  border: 1px solid var(--blue);
}

.gnb-logo .box:nth-child(2) {
  top: var(--logo-bp);
  left: var(--logo-bp);
}
.gnb-logo .box:nth-child(3) {
  top: var(--logo-bp);
}
.gnb-logo .box:nth-child(4) {
  top: var(--logo-bp);
  right: var(--logo-bp);
}
.gnb-logo .box:nth-child(5) {
  bottom: var(--logo-bp);
  left: var(--logo-bp);
}
.gnb-logo .box:nth-child(6) {
  bottom: var(--logo-bp);
}
.gnb-logo .box:nth-child(7) {
  bottom: var(--logo-bp);
  right: var(--logo-bp);
}
#plus-font,
#typo-font {
  width: 200px;
  font-size: 8px;
  position: absolute;
  left: 0;
  color: #333;
}
#plus-font {
  bottom: -20px;
}
#typo-font {
  bottom: -36px;
}
#plus-font:before,
#typo-font:before {
  display: inline-block;
  width: 30px;
  color: var(--blue);
}
#plus-font:before {
  content: "Plus";
}
#typo-font:before {
  content: "Typo";
}

.gnb-logo h1.logo {
  display: inline;
  font-size: 42px;
  color: #333;
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
  transition: 0.3s;
  opacity: 1;
}

.gnb-menu ul {
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 100%;
  gap: 2rem;
}

nav {
  width: 120px;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 999;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: 0.3s;
  opacity: 0;
  background: rgba(255, 255, 255, 0.5);
  -webkit-backdrop-filter: saturate(180%) blur(15px);
  -moz-backdrop-filter: saturate(180%) blur(15px);
  -o-backdrop-filter: saturate(180%) blur(15px);
  backdrop-filter: saturate(180%) blur(15px);
}
nav.show {
  opacity: 1;
}
nav ul {
  margin: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  gap: 1rem;
}
nav ul li a {
  display: block;
  font-size: 8px;
  line-height: 20px;
}
nav ul li a img {
  width: 40px;
  height: 40px;
  border-radius: 10%;
}

footer {
  flex: 1 0 80px;
  width: 100%;
  margin-top: 100px;
  font-size: 13px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 3px;
  background-color: #f4f4f4;
}

address {
  text-align: center;
}

footer p a {
  text-decoration: underline;
}

.privacy-container {
  max-width: 600px;
  margin: 0 auto;
  padding: 0 20px;
  font-size: 13px;
  line-height: 1.8;
}
.privacy-container h2 {
  font-size: 24px;
  font-weight: 600;
  margin-bottom: 20px;
}
.privacy-container p {
  margin-bottom: 20px;
}
.privacy-container strong {
  font-weight: 600;
}

.item-wrap {
  display: flex;
  margin-bottom: 50px;
  gap: 25px;
  opacity: 0;
  transform: translateY(30px);
}
.item-wrap.loaded {
  opacity: 1;
  transform: translateY(0);
  transition: all 1s ease;
}
.item-title {
  height: 500px;
  font-size: 24px;
  line-height: 120%;
  font-weight: 100;
  color: #999;
  width: 150px;
  border-top: 1px solid #0f8eff;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.item-title span {
  font-size: 16px;
  font-weight: 600;
  color: #0f8eff;
}
.item-title h2 {
  flex: 1;
  margin-top: 20px;
}
.sample {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.sample p {
  font-size: 13px;
  color: var(--blue);
  margin-bottom: 10px;
}
.sample img {
  border-radius: 5px;
}

.item-result {
  display: none;
  width: 498px;
  height: 498px;
  background-color: #f7f7f7;
  border-radius: 5px;
  border: 1px dashed #0f8eff;
}
.item-image {
  position: relative;
  margin: auto;
  display: blcok;
  width: 500px;
  height: 500px;
  border-radius: 5px;
  background: #19202c url("../images/app1_sample.webp") no-repeat center center /
    cover;
}
.item-image::before {
  content: "";
  display: block;
  width: 500px;
  height: 500px;
  position: absolute;
  top: 0;
  left: 0;
  border-radius: 5px;
  backdrop-filter: blur(10px);
  -webkit-backdrop-filter: blur(10px);
}

.file-wrap {
  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  z-index: 1;
}
.file-wrap input {
  display: none;
}
.file-wrap label::before {
  content: "";
  position: relative;
  top: 3px;
  display: inline-block;
  width: 16px;
  height: 16px;
  margin-right: 10px;
  opacity: 0.5;
  background: url("../images/image.svg") no-repeat center center / cover;
}
.btn {
  position: relative;
  display: block;
  width: 130px;
  height: 40px;
  line-height: 40px;
  margin: auto;
  padding: 0 16px;
  font-size: 14px;
  text-align: center;
  color: white;
  background-color: var(--blue);
  border: none;
  border-radius: 50px;
  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
  transition: all 0.3s ease-in-out;
  cursor: pointer;
  z-index: 2;
}
.btn:hover {
  background-color: #fff;
  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.7);
  transform: translateY(-2px);
  color: var(--blue);
}
.btn.btn-dark {
  color: white;
  background-color: #19202c;
}
.lang {
  position: relative;
  display: flex;
  gap: 1rem;
  margin-bottom: 2rem;
  z-index: 10;
}
.btn-lang {
  color: #999;
  display: flex;
  flex-direction: row;
  cursor: pointer;
}
.btn-lang.active {
  color: var(--blue);
}
input[type="date"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  position: relative;
}
input[type="date"]::-webkit-calendar-picker-indicator {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: transparent;
  color: transparent;
  cursor: pointer;
}
.input-wrap {
  display: flex;
  align-items: center;
}
.input-wrap label {
  display: none;
}
input::-webkit-input-placeholder {
  font-size: 13px;
}
input::-moz-placeholder {
  font-size: 13px;
}
input:-ms-input-placeholder {
  font-size: 13px;
}
input::-ms-input-placeholder {
  font-size: 13px;
}
input::placeholder {
  font-size: 13px;
}
textarea:focus::-webkit-input-placeholder,
input:focus::-webkit-input-placeholder {
  opacity: 0;
}
textarea:focus::-moz-placeholder,
input:focus::-moz-placeholder {
  opacity: 0;
}
textarea:focus:-ms-input-placeholder,
input:focus:-ms-input-placeholder {
  opacity: 0;
}
textarea:focus::-ms-input-placeholder,
input:focus::-ms-input-placeholder {
  opacity: 0;
}
textarea:focus::placeholder,
input:focus::placeholder {
  opacity: 0;
}
.input-wrap textarea,
.input-wrap input {
  display: inline-block;
  font-size: 20px;
  color: #fff;
  text-align: center;
  margin-left: 10px;
  padding: 0;
  width: 80%;
  height: 30px;
  border: 1px solid var(--blue);
  background: rgba(0, 0, 0, 0.4);
  border-radius: 5px;
  outline: none;
  z-index: 2;
}

i.result-temp-bg {
  display: block;
  width: 500px;
  height: 500px;
  background: url(../images/output-bg.svg) no-repeat center;
}

.selected-image {
  grid-row: 1/3;
  grid-column: 1/5;
  position: absolute;
  top: 0;
  width: 100%;
  height: 500px;
  display: flex;
  overflow: hidden;
  background-repeat: no-repeat;
}
.selected-image img {
  position: relative;
  width: 100%;
  margin: auto;
  transition: transform 0.2s ease;
}
.selected-image-position {
  position: absolute;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  gap: 10px;
  justify-content: center;
  align-items: center;
}
.selected-image-position span {
  padding: 5px 8px;
  border-radius: 100px;
  background-color: rgba(0, 0, 0, 0.5);
  color: #fff;
  font-size: 13px;
  z-index: 2;
  display: none;
}
.selected-image-position .selected-image-position-reset {
  top: 270px;
  left: 230px;
  background-color: rgba(0, 0, 0, 0.7);
  cursor: pointer;
}

.clearBtn {
  margin-left: -10px;
  font-size: 8px;
  width: 20px;
  height: 20px;
  color: white;
  background: var(--blue);
  border: none;
  border-radius: 50%;
  cursor: pointer;
  z-index: 2;
}
.btn-wrap {
  width: 500px;
  margin: 20px auto;
}
.result-wrap {
  max-width: 500px;
  margin: auto;
  text-align: center;
}

.image-container canvas {
  width: 100%;
}
.result-wrap .download a {
  margin: 17px auto;
  text-decoration: none;
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: #19202c;
  border-bottom: 1px solid rgba(25, 32, 44, 0.7);
  border-bottom-right-radius: 23px;
}
.result-wrap .download a p {
  font-size: 14px;
  margin: 0;
}
.result-wrap .download a p span {
  font-family: "S-CoreDream-3Light", sans-serif;
  font-size: 11px;
  color: grey;
  margin-right: 20px;
}
.result-wrap .download a .btn {
  margin: 0;
}

